--- a/02-flask/02-flask/02-playground/templates/index.html
+++ b/02-flask/02-flask/02-playground/templates/index.html
@@ -28,7 +28,7 @@
 <body>
     <h1>Welcome!</h1>
     <div class='wrapper'>
-        {% for var in range(0,num) %}
+        {% for var in range(0,num): %}
         <div class='box'> </div>
         {%endfor%}
     </div>
