--- a/02-flask/02-flask/05-dojo_survey/templates/index.html
+++ b/02-flask/02-flask/05-dojo_survey/templates/index.html
@@ -21,11 +21,11 @@
         <form action="/process" method="POST">
             <div class="form-group">
                 <label>Name:</label>
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" class="form-control" placeholder="Your Name" name="name">
             </div>
             <div class="form-group">
                 <label>Dojo Location:</label>
-                <select class="form-control">
+                <select class="form-control" name="dojoLocation">
                     <option>Seattle</option>
                     <option>Denver</option>
                     <option>Los Angeles</option>
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label >Favorite Language:</label>
-                <select class="form-control">
+                <select class="form-control" name="favoriteLanguage">
                     <option>Python</option>
                     <option>C#</option>
                     <option>Java</option>
