--- a/02-flask/02-flask/05-dojo_survey/templates/result.html
+++ b/02-flask/02-flask/05-dojo_survey/templates/result.html
@@ -19,15 +19,15 @@
         <h1 class="display-5">Submitted Info</h1>
         <dl class="row">
             <dt class="col-sm-3">Name:</dt>
-            <dd class="col-sm-9">John Doe</dd>
+            <dd class="col-sm-9">{{ survey_info['name'] }}</dd>
             <dt class="col-sm-3">Dojo Location:</dt>
-            <dd class="col-sm-9">Los Angeles</dd>
+            <dd class="col-sm-9">{{ survey_info['dojoLocation'] }}</dd>
             <dt class="col-sm-3">Favorite Language:</dt>
-            <dd class="col-sm-9">Python</dd>
+            <dd class="col-sm-9">{{ survey_info['favoriteLocation'] }}</dd>
             <dt class="col-sm-3">Comments:</dt>
-            <dd class="col-sm-9">A description list is perfect for defining terms. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur et sapiente harum, perspiciatis vero, sint repellendus id assumenda reiciendis aperiam ex animi sequi expedita modi aliquam excepturi explicabo dolores esse? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui sint laboriosam exercitationem nobis cumque quasi cupiditate deleniti quis minus aut est cum, nemo eaque voluptate quam nulla amet, aliquid ut.</dd>
+            <dd class="col-sm-9">{{ survey_info['comments'] }}</dd>
         </dl>
-    
+        <a class='btn btn-primary btn-lg' href="/">Return</a>
     </div> <!-- End Wrapper Div  -->
     
 </body>
