--- a/02-flask/02-flask/07-counter/templates/index.html
+++ b/02-flask/02-flask/07-counter/templates/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <h1 class="display-1">Counter</h1>
         <p class="lead"><strong>
-            {{ count}} times
+           Visited {{ session['counter'] }} times
         </strong></p>
         <form action="/counter" method="POST">
             <button type="button" class="btn btn-light">Add 2 Visits !</button>
