--- a/02-flask/02-flask/10-dojo_survey_with_validation/templates/index.html
+++ b/02-flask/02-flask/10-dojo_survey_with_validation/templates/index.html
@@ -4,23 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ninja Gold</title>
+    <title>Dojo Survey</title>
 </head>
-<style>
-    .container{
-
-    }
-
-</style>
 <body>
     <div class="container">
-        <div class="header">
-            <label for="">Your Gold</label>
-            <h4>10</h4>
-        </div>
-        <div class="location">
-
-        </div>
 
     </div>
 </body>
