--- a/02-flask/02-flask/09-ninja_gold/templates/index.html
+++ b/02-flask/02-flask/09-ninja_gold/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <style>
     .container{
+        justify-content: center;
 
     }
 
@@ -18,7 +19,11 @@
             <label for="">Your Gold</label>
             <h4>10</h4>
         </div>
-        <div class="location">
+        <div class="locations">
+            <div class="location">
+
+
+            </div>
 
         </div>
 
