--- a/02-flask/02-flask/10-dojo_survey_with_validation/templates/result.html
+++ b/02-flask/02-flask/10-dojo_survey_with_validation/templates/result.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="display-4">Results:</h1>
+        <h1 class="display-4">Submitted Info:</h1>
         <p>Name:<label> {{ session['name'] }} </label></p>
         <p>Dojo Location:<label> {{ session['dojoLocation'] }} </label></p>
         <p>Favorite Location:<label> {{ session['favoriteLocation'] }} </label></p>
