--- a/02-flask/02-flask/11-registration_form/templates/index.html
+++ b/02-flask/02-flask/11-registration_form/templates/index.html
@@ -9,20 +9,42 @@
 </head>
 <body>
     <div class="container">
-        <form>
+        <h1 class="display-5">User Registration Form</h1>
+        {% with messages = get_flashed_messages(with_categories = true) %}
+            {% for category, message in messages %}
+            <div class="alert alert-success" role="alert">
+                <p>Cateogry: {{ category }} </p>
+                <p>Message: {{ messages }} </p>
+            </div>
+            {% endfor %}
+        {%endwith%}
+
+        <form action="/process"  method="POST" class="form-group">
+            <div class="form-group">
+                <label for="firstName">Fist Name</label>
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Fisrt Name">                
+            </div>
+
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">                
+            </div>
+
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <input type="email" class="form-control" id="exampleInputEmail1" name="email" placeholder="Enter email">                
             </div>
+
             <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
             </div>
-            <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+            <div class="form-group">
+                    <label for="confirmPassword">Confirm Password</label>
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Password" name="confirmPassword">
             </div>
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
