--- a/02-flask/02-flask/11-registration_form/templates/index.html
+++ b/02-flask/02-flask/11-registration_form/templates/index.html
@@ -12,10 +12,16 @@
         <h1 class="display-5">User Registration Form</h1>
         {% with messages = get_flashed_messages(with_categories = true) %}
             {% for category, message in messages %}
-            <div class="alert alert-success" role="alert">
-                <p>Cateogry: {{ category }} </p>
-                <p>Message: {{ messages }} </p>
-            </div>
+                {% if category == 'error'%}
+                    <div class="alert alert-error" role="alert">
+                        <p> {{ message }} </p>
+                    </div>
+                {%endif%}
+                {% if category == 'success' %}
+                    <div class="alert alert-success" role="alert">
+                        <p> {{ message }} </p>
+                    </div>
+                {%endif%}
             {% endfor %}
         {%endwith%}
 
