--- a/02-flask/02-flask/11-registration_form/templates/index.html
+++ b/02-flask/02-flask/11-registration_form/templates/index.html
@@ -13,7 +13,7 @@
         {% with messages = get_flashed_messages(with_categories = true) %}
             {% for category, message in messages %}
                 {% if category == 'error'%}
-                    <div class="alert alert-error" role="alert">
+                    <div class="alert alert-warning" role="alert">
                         <p> {{ message }} </p>
                     </div>
                 {%endif%}
