--- a/04-flask_mysql/02-required/02-c_and_r_friends/templates/index.html
+++ b/04-flask_mysql/02-required/02-c_and_r_friends/templates/index.html
@@ -16,24 +16,19 @@
         <div class="container" id="friendTable">
             <table class="table">
                 <thead class="thead-light">
-                    <th scope="col">#</th>
+                    
                     <th scope="col">First Name</th>
                     <th scope="col">Last Name</th>
                     <th scope="col">Occupation</th>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>HandyMan</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>Garderner</td>
-                    </tr>
+                    {% for friend in friends %}
+                        <tr scope="row">
+                            <td>{{ friend['first_name'] }}</td>
+                            <td>{{ friend['last_name'] }}</td>
+                            <td>{{ friend['occupation'] }}</td>
+                        </tr>
+                    {% endfor %}
                 </tbody>
                 <br>
             </table>
