--- a/04-flask_mysql/02-required/03-leads_and_clients/templates/index.html
+++ b/04-flask_mysql/02-required/03-leads_and_clients/templates/index.html
@@ -4,23 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
+    integrity=sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO
+    crossorigin=anonymous>
+    <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+    <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
     <title>Leads and Clients</title>
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Page Title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-        <script src="main.js"></script>
-    </head>
-    <body>
-        
-    </body>
-    </html>
 </head>
+<script>
+    window.onload = function (query_result) {
+        var options = {
+            title: {
+                text: "Customers and # of Leads"
+            },
+            animationEnabled: true,
+            data: [{
+                type: "pie",
+                dataPoints: [
+                    { y: 48.36, label: "Windows 7" },
+                    { y: 26.85, label: "Windows 10" },
+                    { y: 1.49, label: "Windows 8" },
+                    { y: 6.98, label: "Windows XP" },
+                    { y: 6.53, label: "Windows 8.1" },
+                    { y: 2.45, label: "Linux" },
+                    { y: 3.32, label: "Mac OS X 10.12" },
+                    { y: 4.03, label: "Others" }
+                ]
+            }]
+        };
+        $("#chartContainer").CanvasJSChart(options);
+        
+        }
+</script>
 <body>
+    <div class="container">
+        <h3> Report Dashboard</h3>
+        <br>
+    </div>
+    <div class="container">
+        <form action="/apply_filter" method="POST">
+            <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="from_date">From Date</span>
+            </div>
+            <input type="date" class="form-control" id="from_date" name="from_date" value="from_date">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="to_date">To Date</span>
+                </div>
+                <input type="date" class="form-control" id="to_date" name="to_date" value="to_date">
+            </div>
+            <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+        <br>
+    </div>
+    <div class="container">
+        <br>
+        <p><u>List of customers and # ofd Leads</u></p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Customer Name</th>
+                    <th scope="col"># of Leads</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for result in query_result %}
+                <tr scope="row">
+                    <td>{{ result['client_name'] }}</td>
+                    <td>{{ result['number_of_leads'] }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div id="chartContainer" style="height: 370px; width: 100%;"></div>
     
 </body>
 </html>
