--- a/04-flask_mysql/02-required/03-leads_and_clients/templates/index.html
+++ b/04-flask_mysql/02-required/03-leads_and_clients/templates/index.html
@@ -13,6 +13,8 @@
 </head>
 <script>
     window.onload = function (query_result) {
+        console.log(query_result);
+
         var options = {
             title: {
                 text: "Customers and # of Leads"
